--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,15 +9,25 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to 'Social Board', root_path, class: "navbar-brand" %>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
+      <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        
+        
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to 'Profile', edit_user_registration_path %></li>
+          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+        <% else  %>
+          <li ><%= link_to 'Login', login_path %></li>
+          <li ><%= link_to 'Signup', signup_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
+    </div>
+
+    
   </div><!-- /.container-fluid -->
 </nav>
